--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FNH-Portfolio</title>
+    <title>FNH-portofolio</title>
     <link href="dist/css/final.css" rel="stylesheet" />
     <script>
       if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -73,9 +73,9 @@
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">Halo semua 👋, saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Fattah Nurizha Herlambang</span></h1>
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl"><span class="text-dark dark:text-white"></span></h2>
-            <p class="mb-10 font-medium leading-relaxed text-secondary">Kecantikan sebuah website terletak pada kepiawaian seorang Frontend Developer dalam menggabungkan kreativitas dan keahlian teknis.<span class="font-bold text-dark dark:text-white">bukan!</span></p>
+            <p class="mb-10 font-medium leading-relaxed text-secondary">Jangan biarkan bug menghentikan langkahmu, tapi jadikan mereka tantangan yang akan kamu taklukkan. Seorang web developer tidak pernah menyerah dalam mencari solusi.<span class="font-bold text-dark dark:text-white">!</span></p>
 
-            <a href="#" class="rounded-full bg-primary py-3 px-6 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Frontend Developer</a>
+            <a href="#" class="rounded-full bg-primary py-3 px-6 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Web Developer</a>
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
@@ -303,7 +303,7 @@
             <h3 class="mb-2 text-2xl font-bold">Alamat</h3>
             <p></p>
             <p>Jl. Untung Suropati No.au4, RT.004/RW.007, Cimone Jaya, Kec. Karawaci, Kota Tangerang, Banten 15114</p>
-            <p>Bandung</p>
+            <p></p>
           </div>
           <div class="mb-12 w-full px-4 md:w-1/3">
             <h3 class="mb-5 text-xl font-semibold text-white">Minat</h3>
@@ -420,7 +420,7 @@
             </a>
           </div>
           <p class="text-center text-xs font-medium text-slate-500">
-            Dibuat dengan <span class="text-pink-500">❤️</span> oleh <a href="https://instagram.com/sandhikagalih" target="_blank" class="font-bold text-primary">Fattah Nurizha Herlambang</a>, menggunakan
+            Dibuat dengan <span class="text-pink-500">Code</span> oleh <a href="https://instagram.com/sandhikagalih" target="_blank" class="font-bold text-primary">Fattah Nurizha Herlambang</a>, menggunakan
             <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS</a>.
           </p>
         </div>
