--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold  text-primary">Tentang saya</h4>
             <h6 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">IT Enthusiast!</h6>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Dunia IT adalah medan petualangan yang penuh dengan teka-teki dan tantangan. Jadilah pahlawan yang tak kenal lelah dalam mencari solusi dan mencapai kemajuan.</p>
+            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Seorang mahasiswa Universitas Bina Sarana Informatika semester 2 jurusan teknik informatika siap menerjemahkan imajinasi ke dalam karya-karya digital yang menarik. Saya yakin bahwa web development adalah jalan yang tepat untuk mengekspresikan kreativitas. Menguasai bahasa pemrograman seperti HTML, CSS, dan JavaScript</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Social media</h3>
